<resources>
    <string name="app_name">CarsDatabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_select">Select a type</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="hp">Horsepower</string>
    <string name="date">Date </string>
    <string name="empty_field">Empty field</string>
    <string name="year_card">Year: </string>
    <string name="hp_card">HP: </string>
    <string name="date_card">Added: </string>
    <string name="type_card">Type of car: </string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="empty_fields">This field is empty</string>
    <string name="error_field">You must write something</string>
    <string name="help_brand">Write a car brand</string>
    <string name="help_model">Write a car model</string>
    <string name="help_year">Write launch year</string>
    <string name="help_hp">Write the hp</string>
    <string name="help_date">Write a date</string>
    <string name="type">type</string>
    <string name="brand_model">brand, model</string>
    <string name="hp_">hp</string>
    <string name="year_">year</string>
    <string name="go_to_types">Add/Edit types</string>
    <string name="add_type">Add Type</string>
    <string name="delete_edit_type">Delete / Edit Type</string>
    <string name="support_text_delete_type">To Edit, select a type and write the new name.\n To delete, select the type to delete</string>
    <string name="support_text_add_type">To Add a type, simply write the name on the input</string>
    <string name="hint_add_type">Add type</string>
    <string name="hint_edit_delete_type">New name</string>
</resources>